# emtp_ws

./: .gitignore  README.md
emtp_robot/: package.xml  setup.cfg  setup.py
emtp_robot/emtp_robot/: dynamic_trig.py  execution copy.py  execution.py  go_task.py  trig origin.yaml  trig.yaml  wp_list copy.yaml  wp_list.yaml  wp_list_lab.yaml
emtp_server/: package.xml  setup.cfg  setup.py
emtp_server/EMTP/resource/: allocation_agent.py  analyze_agent.py  example.py  example_robot.py  method copy.py  method.py  reasoning_agent.py  reasoning_agent_robot.py  supervisor_agent.py
emtp_server/EMTP/script/: main_ros.py
emtp_server/common/: instructions.py  llm_call.py  robot.py  token_survey.py
emtp_server/common/env/college/: path_matrix.csv
emtp_server/common/env/experiment/: 0.yaml  ex_hard.json  experiment_hard.json  (+3 more)
emtp_server/emtp_server/: record_bag.sh  server.py
emtp_server/log/: latest_list
emtp_server/result/experiment_20251211_195027/: server_experiment_20251211_195027.json
emtp_server/result/experiment_20251211_202013/: server_experiment_20251211_202013.json
emtp_server/result/experiment_20251211_220341/: experiment_allocation_20251211_220400.json  experiment_token_20251211_220400.json
emtp_server/result/experiment_20251222_161717/: server_experiment_20251222_161717.json
emtp_server/result/experiment_20251222_161949/: server_experiment_20251222_161949.json
emtp_server/result/experiment_20260108_043933/: server_experiment_20260108_043933.json
emtp_server/result/experiment_20260119_232253/: experiment_allocation_20260119_232311.json  experiment_token_20260119_232311.json
emtp_server/result/experiment_20260119_232810/: experiment_allocation_20260119_232826.json  experiment_token_20260119_232826.json
emtp_server/result/experiment_20260119_233042/: experiment_allocation_20260119_233101.json  experiment_token_20260119_233101.json
log/: latest_list
psi_interfaces/: CMakeLists.txt  package.xml
psi_interfaces/msg/: Cancel.msg  FleetState.msg  Location.msg  RobotPath.msg  RobotState.msg  TaskComplete.msg  TaskRequest.msg
psi_interfaces/srv/: AllocationResult.srv  DynamicEvent.srv
server_rviz/: package.xml  setup.cfg  setup.py
server_rviz/launch/: server_rviz.launch.py
server_rviz/rviz/: server.rviz
server_rviz/server_rviz/: global_map_publisher.py
(+4 files in other folders)
