<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>emtp_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="qkrwk0921@naver.com">psi</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>visualization_msgs</depend>
  <!-- Custom interface dependency -->
  <depend>psi_interfaces</depend>  <!-- ✅ 따로 만든 msg/srv 패키지를 의존하도록 -->

  <!-- Runtime dependency for ROS messages -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
