<?xml version="1.0"?>
<package format="3">
  <name>psi_interfaces</name>
  <version>0.1.0</version>
  <description>Custom interfaces for PSI project</description>

  <maintainer email="qkrwk0921@naver.com">psi</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS2 message dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
